examples/test/testpolicy3029.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy3029
  namespace: namespace161
spec:
  podSelector:
    matchLabels:
      key36: value44
      key29: value17
      key7: value7
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key7: value8
          key37: value3
          key21: value12
      podSelector:
        matchLabels:
          key27: value36
